Fixing alignment

--- a/style.css
+++ b/style.css
@@ -6,19 +6,23 @@ body{
 
 header{
   width: 100%;
-  height: 20%;
+  height: 15vh;
 }
 
 header h3, header a{
   display: inline-block;
   color: #182153;
-  margin-right: 900px;
 }
 
 header h3{
   font-size: 20px;
   text-transform: capitalize;
   margin-left: 40px;
+}
+
+.links{
+  display: inline-block;
+  margin-left: 50%;
 }
 
 header a{
@@ -32,19 +36,18 @@ header a{
 
 .background-pic{
   background-image: url(computer.jpg);
-  padding-top: 180px;
-  align-items: flex-end;
+  width: 100%;
+  height: 85vh;
+  overflow: hidden;
 }
 
-section .background-info{
-  position: absolute;
-  z-index: -1;
-}
 
 .profile{
+  position: absolute;
+  left: 50vw;
+  bottom: 0;
   width: 60%;
   margin: auto;
-  overflow: hidden;
   background-color: #fff;
 }
 
